[package]
name = "mandarin-to-pinyin"
version = "0.0.1"
edition = "2024"
description = "A Rust crate for converting Mandarin Chinese to Pinyin."
license = "MIT"
repository = "https://github.com/bingqiao/mandarin-to-pinyin"
keywords = ["mandarin", "pinyin", "chinese", "conversion"]
categories = ["text-processing", "localization"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
phf = { version = "0.12.1", features = ["macros"] }

[features]
default = ["default-data"]
prepare-data = []
default-data = []
